# harmony-app-rs

./: .gitignore  Cargo.toml  README.md
examples/aaaa1/: Cargo.toml
examples/aaaa1/src/: lib.rs
examples/counter-native/: Cargo.toml  ohos-app.toml
examples/counter-native/src/: lib.rs
examples/winit-smoke/: Cargo.toml  ohos-app.toml
examples/winit-smoke/src/: lib.rs
ohos-app/: hvigorw.js  oh-package-lock.json5  oh-package.json5  package.json
ohos-app/AppScope/: app.json5
ohos-app/AppScope/resources/base/element/: string.json
ohos-app/entry/: build-profile.json5  obfuscation-rules.txt  oh-package.json5
ohos-app/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
ohos-app/entry/src/main/cpp/types/libentry/: index.d.ts
ohos-app/entry/src/main/ets/entryability/: EntryAbility.ets
ohos-app/entry/src/main/ets/pages/: Index.ets
ohos-app/entry/src/main/resources/base/element/: string.json
src/: cli.rs  config.rs  errors.rs  project.rs  sdk.rs  template.rs
src/commands/: init.rs
tests/: cli_flow.rs
